snapshots/syntax/library/functions/math/fix/fix_abs.snap
---
source: src/syntax/library/functions/math/fix.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: cents
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Fix
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: Abs
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: BinaryExpression
                                          children:
                                            - kind: ParenthesizedExpression
                                              children:
                                                - kind: LeftParenthesis
                                                  text: (
                                                - kind: BinaryExpression
                                                  children:
                                                    - kind: IdentifierExpression
                                                      children:
                                                        - kind: Identifier
                                                          text: amount
                                                    - kind: Whitespace
                                                      text: " "
                                                    - kind: SubtractionOperator
                                                      text: "-"
                                                    - kind: Whitespace
                                                      text: " "
                                                    - kind: IdentifierExpression
                                                      children:
                                                        - kind: Identifier
                                                          text: dollars
                                                - kind: RightParenthesis
                                                  text: )
                                            - kind: Whitespace
                                              text: " "
                                            - kind: MultiplicationOperator
                                              text: "*"
                                            - kind: Whitespace
                                              text: " "
                                            - kind: NumericLiteralExpression
                                              children:
                                                - kind: IntegerLiteral
                                                  text: "100"
                                - kind: RightParenthesis
                                  text: )
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
